--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,7 +1,7 @@
 /* Home.css */
 .home {
     min-height: 100vh;
-    background: linear-gradient(135deg, #171a23 0%, #c624c3 100%);
+    background: linear-gradient(135deg, rgba(23, 26, 35, 0.91) 0%, #da36cc 100%);
     color: white;
     overflow-x: hidden;
 }
